# lantern-lib

./: .gitmodules  BaseExamples.txt  CMakeLists.txt  CNAME  LICENSE.md  Logging.h  README.md  TODO.txt  Vector.h  main.cpp  pch.h
.github/workflows/: cmake-single-platform.yml
AutoGradient/: CMakeLists.txt  FeedForward.cpp  FeedForward.h  Node.cpp  Node.h  ReverseMode.cpp  ReverseMode.h
ConvolutionalNeuralNetwork/: BackPropagation.h  CNNBackPropagation.h  CNNExperimentalFeedForward.h  CNNLayer.h  CNNNode.h  ConvolutionalNeuralNetwork.h  ExperimentalFeedForward.h  FeedForward.h  Layer.h  Node.h
ConvolutionalNeuralNetwork/CNNOptimizer/: CNNBase.h  CNNGradientDescent.h  CNNOptimizer.h
Dataset/: Dataset.h  Idxd.h
Examples/: CMakeLists.txt  GenderByWeightAndHeight.cpp (Deprecated)  GenderByWeightAndHeightSimple.cpp  MnistDataset.cpp  MultipleCLass.cpp (Deprecated)  MultipleClass.cpp  MultipleClassSimple.cpp  XORAdvance.cpp  XORAdvance.cpp (Depreacted)  XORSimple.cpp  XORSimple.cpp (Deprecated)
Examples/Matrix Optimize FFN/: CMakeLists.txt  GenderByWeightAndHeight.cpp  XOR.cpp  main.cpp
Examples/Optimize Version FFN/: CMakeLists.txt  XOR.cpp  main.cpp
FeedForwardNetwork/: ActivationFunction.h  BackPropagation.h  CMakeLists.txt  DataProcessing.h  FFNBackPropagation.h  FFNDataProcessing.h  FFNFeedForward.h  FFNLayer.h  FFNNode.h  FeedForward.h  FeedForwardNetwork.h  Function.h  Initialize.h  Layer.h  Layering.h  Loader.h  LossFunction.h  Node.h  Perceptron.cpp  Perceptron.h  PerceptronFeedForward.cpp  PerceptronFeedForward.h  Regularization.h
FeedForwardNetwork (Depcrecated)/: ActivationFunction.h  BackPropagation.h  FeedForwardNetwork.h  Layering.h  LossFunction.h  Perceptron.cpp  Perceptron.h  PerceptronFeedForward.h
FeedForwardNetwork (Depcrecated)/Headers/Optimizer/: AdaptiveMomentEstimation.h  GradientDescent.h  StochasticGradientDescentWithMomentum.h
FeedForwardNetwork/FFNOptimizer/: FFNAdaptiveGradientDescent.h  FFNAdaptiveMomentEstimation.h  FFNBase.h  FFNGradientDescent.h  FFNOptimizer.h  FFNRootMeanSquaredPropagation.h  FFNStochasticGradientDescentWithMomentum.h
FeedForwardNetwork/Headers/Optimizer/: AdaptiveGradientDescent.h  AdaptiveMomentEstimation.h  GradientDescent.h  RootMeanSquaredPropagation.h  StochasticGradientDescentWithMomentum.h
FeedForwardNetwork/Optimizer/: AdaptiveGradientDescent.h  AdaptiveMomentEstimation.h  Base.h  GradientDescent.h  Optimizer.h  RootMeanSquaredPropagation.h  StochasticGradientDescentWithMomentum.h
Headers/: File.h  Function.h  Initialize.h  Logging.h  Model.h  SymbolDerivative.h  Vector.h
docs/: index.html
test/: CMakeLists.txt
test/AutoGradient/: CMakeLists.txt  main.cpp
